[gd_scene load_steps=6 format=2]

[ext_resource path="res://png/Kunai.png" type="Texture" id=1]
[ext_resource path="res://Kunai.gd" type="Script" id=2]
[ext_resource path="res://Game_Assets/soundsandmusic/sounds/szwingchime-38716.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 28.1666 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 64.5 )

[node name="Kunai" type="KinematicBody2D"]
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
collision_layer = 32
collision_mask = 18
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.43051e-06, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.6226e-08, -5.96047e-07 )
shape = SubResource( 1 )

[node name="kunai" type="Area2D" parent="."]
position = Vector2( 1.43051e-06, 0 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 32
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="kunai"]
position = Vector2( 2.90078e-06, 8.23203e-06 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 2.32975, 5.93973 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="Sound_kunai" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 2.0

[connection signal="body_entered" from="kunai" to="." method="_on_kunai_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
